<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical"
    android:background="@drawable/signup_flower">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="65dp"
        android:src="@drawable/person" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text="@string/up_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/pretty"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/upname"
        android:layout_width="match_parent"
        android:layout_marginTop="1dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/up_name_write"
        android:fontFamily="@font/pretty"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:textColor="@color/black"
        android:text="@string/up_id"
        android:fontFamily="@font/pretty"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/upid"
        android:layout_width="match_parent"
        android:layout_marginTop="1dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/up_hint_id"
        android:fontFamily="@font/pretty"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text="@string/up_pw"
        android:textColor="@color/black"
        android:fontFamily="@font/pretty"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/uppw"
        android:layout_width="match_parent"
        android:layout_marginTop="1dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/up_hint_pw"
        android:inputType="textPassword"
        android:fontFamily="@font/pretty"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text="@string/up_age"
        android:textColor="@color/black"
        android:fontFamily="@font/pretty"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/upage"
        android:layout_width="match_parent"
        android:layout_marginTop="1dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/up_hint_age"
        android:fontFamily="@font/pretty"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text="@string/up_mbti"
        android:textColor="@color/black"
        android:fontFamily="@font/pretty"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/upmbti"
        android:layout_width="match_parent"
        android:layout_marginTop="1dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/up_hint_mbti"
        android:fontFamily="@font/pretty"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text="@string/up_like"
        android:textColor="@color/black"
        android:fontFamily="@font/pretty"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/uplike"
        android:layout_width="match_parent"
        android:layout_marginTop="1dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginBottom="35dp"
        android:layout_height="wrap_content"
        android:hint="@string/up_hint_like"
        android:fontFamily="@font/pretty"
        android:textStyle="bold"
        />


    <Button
        android:id="@+id/btn_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text="회원가입"
        android:textSize="20sp"
        android:fontFamily="@font/pretty"
        android:textStyle="bold" />


</LinearLayout>