<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:orientation="vertical"
    android:background="@drawable/flower">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginLeft="23dp"
        android:layout_marginVertical="50dp"
        android:src="@drawable/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text= "@string/in_text_id"
        android:textColor="@color/black"
        android:fontFamily="@font/pretty"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/inid"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:hint="@string/in_id"
        android:fontFamily="@font/pretty"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/in_password"
        android:textColor="@color/black"
        android:fontFamily="@font/pretty"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/inpw"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:hint="@string/in_text_pw"
        android:inputType="textPassword"
        android:fontFamily="@font/pretty"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/in_login_button"
        android:textSize="20sp"
        android:fontFamily="@font/pretty"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text="@string/in_sign_button"
        android:textSize="20sp"
        android:fontFamily="@font/pretty"
        android:textStyle="bold"
        />

</LinearLayout>